--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "express": "^4.13.3",
     "mocha": "^2.3.4",
     "mongodb": "^2.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.8.1"
   }
 }
